Add ui, layout components. And Data Model for Messages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //material 3
-//    implementation("androidx.compose.material3:material3-android:1.2.0-alpha06")
+    implementation("com.google.android.material:material:1.11.0-alpha03")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -62,6 +62,10 @@ dependencies {
     implementation("com.google.firebase:firebase-database-ktx:20.0.0")
     implementation("com.google.firebase:firebase-storage-ktx")
     implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-messaging-ktx:23.2.1")
+
+
+
     //firestore
     //implementation ('com.google.firebase:firebase-firestore:23.0.3')
 
@@ -93,4 +97,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     //Material Design
     implementation 'com.google.android.material:material:1.9.0'
+    //Circle Image View
+//    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
