Set up messaging, seeing bugs with messaging, able to send message, not seeing user or user name, signIn bug, etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Movie_Project"
         tools:targetApi="31">
         <activity
+            android:name=".views.MessagingActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.DetailActivity"
             android:exported="false" />
         <activity
