--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Movie_Project"
         tools:targetApi="31">
         <activity
+            android:name=".UsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.MessagesActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.DetailActivity"
             android:exported="false" />
         <activity
