--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Movie_Project"
         tools:targetApi="31">
         <activity
+            android:name=".Login_Activity"
+            android:exported="false" />
+        <activity
             android:name=".UsersActivity"
             android:exported="false" />
         <activity
@@ -34,7 +37,8 @@
             android:name=".SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".Login_Activity"
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
