--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Movie_Project"
         tools:targetApi="31">
         <activity
+            android:name=".views.Profile2Activity"
+            android:exported="false" />
+        <activity
             android:name=".Login_Activity"
             android:exported="false" />
         <activity
@@ -28,7 +31,7 @@
             android:name=".views.DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".views.ProfileActivity"
+            android:name=".ProfileActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
@@ -38,8 +41,8 @@
             android:exported="true" />
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
