--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Movie_Project"
+        android:theme="@style/Theme.MovieProject"
         tools:targetApi="31">
-        <activity
-            android:name=".views.Profile2Activity"
-            android:exported="false" />
         <activity
             android:name=".Login_Activity"
             android:exported="false" />
